# revis-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/revis/: __init__.py  cli.py  config.py  loop.py  session.py  types.py
src/revis/agents/: __init__.py  aider.py  base.py  claude_code.py  detect.py
src/revis/analyzer/: __init__.py  compare.py  detectors.py
src/revis/artifacts/: __init__.py  base.py  local.py
src/revis/evaluator/: __init__.py  harness.py
src/revis/executor/: __init__.py  base.py  local.py  ssh.py
src/revis/github/: __init__.py  pr.py
src/revis/init/: __init__.py  prompts.py  ssh_config.py
src/revis/init/metrics/: __init__.py  base.py  eval_json.py  wandb.py
src/revis/llm/: __init__.py  actions.py  agent.py  client.py  prompts.py  tools.py  tracer.py
src/revis/metrics/: __init__.py  base.py  eval_json.py  wandb.py
src/revis/store/: __init__.py  base.py  schema.sql  sqlite.py
tests/: __init__.py  test_actions.py  test_config.py  test_detectors.py  test_evaluator.py  test_store.py
