[project]
name = "revis"
version = "0.1.5"
description = "Autonomous ML iteration engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "litellm>=1.0",
    "paramiko>=3.0",
    "pygithub>=2.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
revis = "revis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/revis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/revis/llm/prompts.py" = ["E501"]
"src/revis/llm/tools.py" = ["E501"]
